--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "express": "^5.1.0",
     "js-yaml": "^4.1.0",
-    "markdown-it": "^14.1.0"
+    "markdown-it": "^14.1.0",
+    "nodemailer": "^6.9.14",
+    "dotenv": "^16.4.5",
+    "express-session": "^1.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
